--- a/scss/_chatList.scss
+++ b/scss/_chatList.scss
@@ -1,10 +1,14 @@
+// Body
 .sub {
   background: $color-light-gray;
 }
+
+// Chat list
 .chat_room {
   margin-left: 60px;
 }
 
+// Chat preview
 .preview_wrap {
   color: black;
 
