--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,6 +1,9 @@
+// Body
 .index {
   background: $main-color;
 }
+
+// Login
 .login_container {
   width: 100%;
   height: 100%;
@@ -59,7 +62,7 @@
     .login_form_btn {
       cursor: pointer;
       background: $sub-color;
-      color: white;
+      color: $color-white;
       font-size: 16px;
       font-weight: bold;
       border-radius: 5px;
@@ -67,7 +70,7 @@
       transition: all 300ms;
 
       &:hover {
-        background: white;
+        background: $color-white;
         color: $sub-color;
         border: 1px solid $sub-color;
       }
@@ -82,7 +85,7 @@
     .login_check_label {
       cursor: pointer;
       vertical-align: middle;
-      color: white;
+      color: $color-white;
     }
   }
 }
