--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,3 +1,4 @@
+// Navbar
 .navbar {
   @include chat-box(100%, 60px);
   position: fixed;
@@ -28,6 +29,7 @@
   }
 }
 
+// Header
 .header {
   position: sticky;
   top: 0;
